--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="service-container">
 
         <div class="container">
-            <h2> Smart Model </h2> 
+            <h2 class="title-service"> Smart Model </h2> 
             <p>I enjoy building smart models that help users in important tasks! </p>
              <p class="title-of-service">Libraries and Languages</p>
             <ul class="list-service">
@@ -78,19 +78,19 @@
         </div>
 
          <div class="container">
-            <h2> Web Development</h2>
+            <h2 class="title-service"> Web Development</h2>
             <p> I like designing and building the front-end of websites from scratch.</p>
             <p class="title-of-service">Languages & Tools</p>
             <ul class="list-service">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>Figma</li>
+                <li>Figma, Design UI/UX</li>
             </ul>
           </div>
 
         <div class="container">
-            <h2>Internet of Things</h2>
+            <h2 class="title-service">Internet of Things</h2>
             <p>Automating routinish tasks and connecting hardware with software </p>
             <p class="title-of-service">Tools and Languages</p>
            <ul class="list-service">
@@ -98,7 +98,8 @@
                <li>C++</li>
                <li>Arduino</li>
                <li>ESP32 & ESP86</li>
-               <li>Sensors</li>
+               <li>Sensors& Electronics</li>
+               <!-- <li>Elctronics</li> -->
            </ul>
     </div>
     </section>
@@ -110,7 +111,7 @@
         
             <div class="objects4">
             <img src="imgs/nabtaa.jpg" alt="" width="85px" class="imgnbta">
-            <p>A smart irrigation system, NBTA, involves sensors that capture multiple environmental factors on the plant. These data  are transferred to the smart model, which can decide if the plant needs water,
+            <p class="text-project">A smart irrigation system, NBTA, involves sensors that capture multiple environmental factors on the plant. These data  are transferred to the smart model, which can decide if the plant needs water,
                  and if it does, the system will turn on the water automatically without human intervention.</p>
             <i class='bx bx-link-external'></i>
 
@@ -120,7 +121,7 @@
          
             <div class="objects4">
             <img src="imgs/jeddah.jpg" alt="" width="80px" class="imgnbta">
-            <p>Jeddah's Restaurant Recommendation System, based on customers reviews about the restaurant in Google, new recommendations is displayed to the customers.</p>
+            <p class="text-project">Jeddah's Restaurant Recommendation System, based on customers reviews about the restaurant in Google, new recommendations is displayed to the customers.</p>
             <i class='bx bx-link-external'></i>
 
             </div>
