--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <section class="about" id="about">
 
         <div class="scroll-container">
+            <video src="imgs/vid-1.gif" loop width="100px"></video>
             <p class="aboutme">Graduated from University of Jeddah with first honors in Artificial Intelligence in March 2023.
                 Over the years, I've had the opportunity to build many projects related to my major, including machine learning, deep learning, and robotics.
                 In addition to AI, I am also interested in web development, data science, and analysis.</p>
