--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
 		<div class="content4">
         
             <div class="objects4">
-            <img src="imgs/nabtaa.jpg" alt="" width="85px" class="imgnbta">
+            <img src="imgs/nabtaa.jpg" alt="" width="80px" height="80px" class="imgnbta">
             <p class="text-project">A smart irrigation system, NBTA, involves sensors that capture multiple environmental factors on the plant. These data  are transferred to the smart model, which can decide if the plant needs water,
                  and if it does, the system will turn on the water automatically without human intervention.</p>
-            <i class='bx bx-link-external'></i>
+            <!-- <i class='bx bx-link-external'></i> -->
 
             </div>
         </div>
         <div class="content4">
          
             <div class="objects4">
-            <img src="imgs/jeddah.jpg" alt="" width="80px" class="imgnbta">
+            <img src="imgs/jeddah.jpg" alt="" width="80px" height="80px" class="imgnbta">
             <p class="text-project">Jeddah's Restaurant Recommendation System, based on customers reviews about the restaurant in Google, new recommendations is displayed to the customers.</p>
-            <i class='bx bx-link-external'></i>
+            <!-- <i class='bx bx-link-external'></i> -->
 
             </div>
         </div>
